Cloud-Pet-0.11 上传对应的config文件——以后不再使用private的后缀
Signed-off-by: LiuYueFeiKong <840382376@qq.com>

--- a/pet_config.ini
+++ b/pet_config.ini
@@ -1,5 +1,5 @@
 [Pet]
-nickname = Bell
+nickname = LiuYue
 pet_icon = pet_image\yuansheng\七七.gif
 random_walk = False
 random_chat = False
@@ -8,15 +8,34 @@ height = 300
 shortcuts_chat_window = Ctrl+Alt+2
 shortcuts_chat_web = Ctrl+Alt+1
 
+
+
 [OpenAI]
 #自己的API
-openai_api_key = 
+api_key = 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
 llm_model = gpt-3.5-turbo
 #自己的
 proxy = socks5h://localhost:10010
 timeout_seconds = 100
 max_retry = 3
-openaiapi_url = https://api.openai.com/v1/chat/completions
+authorize_url = https://api.openai.com/v1/chat/completions
+top_p = 1
+temperature = 0.5
+max_tokens = 2048
+
+[LLM]
+LLM_NAME=WenXin
+
+[WenXin]
+api_key = 5zu5RjtelVI7UZpMSfmeLGuc
+secret_key=X81ibUC9foX7g2zVnq45QleVhCqjW0fn
+llm_model = ERNIE_Bot_turbo
+
+#自己的
+proxy = socks5h://localhost:10010
+timeout_seconds = 100
+max_retry = 3
+authorize_url = https://aip.baidubce.com/oauth/2.0/token
 top_p = 1
 temperature = 0.5
 max_tokens = 2048
